--- a/labs/hplc-dad/references.bib
+++ b/labs/hplc-dad/references.bib
@@ -48,3 +48,23 @@
 	keywords = {High performance liquid chromatography}
 }
 
+@book{fanali_liquid_2013,
+	address = {Amsterdam},
+	title = {Liquid chromatography: Fundamentals and Instrumentation},
+	isbn = {9780124158078},
+	publisher = {Elsevier},
+	editor = {Fanali, Salvatore and Haddad, Paul R. and Lloyd, David and Poole, C. F. and Schoenmakers, Peter J.},
+	year = {2013},
+	keywords = {Liquid chromatography, Chemistry, Analytic}
+}
+
+@book{vitha_chromatography:_2017,
+	address = {Hoboken, New Jersey},
+	title = {Chromatography: Principles and Instrumentation},
+	isbn = {9781119270881 9781119270898},
+	shorttitle = {Chromatography},
+	publisher = {Wiley},
+	author = {Vitha, Mark F.},
+	year = {2017},
+	keywords = {Chromatographic analysis, Gas chromatography, Liquid chromatography}
+}
