nearly finished the abstract and discussion

--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -44,7 +44,7 @@ Lab Instructor: & Kevin Stroski % Instructor/supervisor
 %----------------------------------------------------------------------------------------
 
 \begin{abstract}
-	High-performance liquid chromatography utilizing the reverse-phase\dots{}is a separation technique blah blah blah \dots
+	High-performance liquid chromatography utilizing the reverse-phase chromatographic technique was used to test the impact of separations by varying the polarity of the mobile phase on a mixture of benzaldehyde, nitrobenzene and chlorobenzene. In addition, this chromatography technique was used to quantitatively identify what was in a unknown pharmaceutical mixture. Finally, it was used to quantitatively analyze one of the unknowns in the mixture with the help of internal standards. For the first part, it was realized that a mobile phase consisting of $70\%$ methanol proved to give a desirable separation for the mixture. In the qualitative part of the experiment, it was concluded that phenacetin and salicylamide were the unknowns in the pharmaceutical mixture. Finally, the concentration of phenacetin was found out to be blank.
 \end{abstract}
 \newpage
 
@@ -59,7 +59,7 @@ In normal phase chromatography, the stationary phase is more polar than the solv
 
 In terms of detectors, there are numerous ones that are available for the HPLC. The most commonly used detectors are the ultraviolet-visible detectors and mass spectrometers \cite{vitha_chromatography:_2017}. However, in this experiment, the diode array detector (DAD) is utilized, which is actually a type of UV-visible detector \cite{vitha_chromatography:_2017}. This detector consists of two lamps (tungsten-halogen lamp and a deuterium lamp) that is able to produce electromagnetic radiation, which shine onto a detector array, and its continuously recorded  \cite{vitha_chromatography:_2017}. That way, if its disturbed by the flow of the analyte, the disturbance gets recorded due to the difference in absorption properties \cite{vitha_chromatography:_2017}. This is how it is able to detect analytes.
 
-Acetaminophen, an antipyretic and an analgesic for humans, is known to cause poisons in cats and dogs \cite{dogs-cats}.
+There are a number of chemicals that are being tested, one of which is acetaminophen, an antipyretic and an analgesic for humans, is known to cause poisons in cats and dogs \cite{dogs-cats}.
 
 There were three main objectives in this experiment; in the first week, the purpose was to test the efficiency of separations in RP-HPLC by varying the composition of the mobile phase (methanol). In the qualitative part of the experiment, the purpose was to identify the types of compounds present in an unknown pharmaceutical mixture. Finally, in the quantitative part of the experiment, the purpose was to find out the mass of one of the drugs present in the aforementioned unknown pharmaceutical mixture.
 
@@ -234,14 +234,15 @@ The pressure of the column for each analysis is shown in table \ref{tab-pressure
 \textbf{Now draw a table for the data of the calibration curve, and include a figure.}
 
 \subsection{Discussion}
-Give a reason as to why reverse-phase is used as a separation technique and not normal phase.
-
-In the quantitative identification of the pharmaceutical unknown mixture, the initial concentration of the mobile phase was chosen as 50\% methanol, and based on the chromatogram received, this composition was considered to be desirable for the analysis of the aforementioned unknown mixture. This was based on the resolution and the retention time for each peaks.
+The peaks in the chromatogram in figure 4 were able to identified as benzaldehyde, nitrobenzene and chlorobenzene by comparing and matching their retention times to the standards in figures 5, 6 and 7. 
 
 Tables \ref{tab-cf-benzaldehyde}, \ref{tab-cf-nitrobenzene} and \ref{tab-cf-chlorobenzene}, and figure \ref{fig-capacity-factors} clearly show that the capacity factor increases as the percentage of methanol decreases (that is, the polarity of methanol increases). Capacity factor, also known as retention factor \cite{harris}, denotes the time required for the analyte in question to elute \cite{harris}. A greater capacity factor indicates that it is greatly attracted to the column, interacting with the stationary phase \cite{harris}. Therefore, one can conclude that, as it can be clearly seen in figure 4, benzaldehyde is the most polar while chlorobenzene is the least polar of the three compounds; as stated earlier, in RP chromatography, the solvent is more polar than the stationary phase \cite{harris}.
 
-As it can be seen in table \ref{tab-pressure}, the pressure increases whenever the polarity of the mobile phase, in this case methanol, increases (by the addition of water). This is because as one increases the amount of water in the solvent, it increases the viscosity of the solvent, so a higher pressure is required to maintain the flow rate \cite{harris}.
+In the quantitative identification of the pharmaceutical unknown mixture, the initial concentration of the mobile phase was chosen as 50\% methanol, and based on the chromatogram received, this composition was considered to be desirable for the analysis of the aforementioned unknown mixture. This was based on the resolution and the retention time for each peaks. Furthermore, by comparing the the chromatogram of the unknown in figure 8 to the standards of the chromatograms in figures 9, 10, 11 and 12, it was realized that the unknown contains the compounds phenacetin and salicylamide. Again, this was determined by cross-referencing the retention times to the standards.
 
+For determining which of the compounds, phenacetin or salicylamide, would be chosen for quantitative analysis, it was agreed that phenacetin would be the ideal option as its peak area is much greater than salicylamide. As for the internal standards, caffeine instead of acetaminophen was chosen as its peak area is similar to phenacetin.
+
+As it can be seen in table \ref{tab-pressure}, the pressure increases whenever the polarity of the mobile phase, in this case methanol, increases (by the addition of water). This is because as one increases the amount of water in the solvent, it increases the viscosity of the solvent, so a higher pressure is required to maintain the flow rate \cite{harris}.
 
 The reason for using internal standards and not standard addition for calculating the concentration of the unknown analyte is that internal standards are preferred when give an accurate answer when 
 
