add figure of selectivity factors to hplc lab report

--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -89,7 +89,7 @@ Finally, in the qualitative part of the experiment, a series of calibration solu
 \section{Results and Discussion}
 
 \subsection{Results}
-As stated earlier, in the first week of the experiment, the compositions of the mobile phase, methanol, was being varied with HPLC-grade water in order to notice the differences in separations in RP-HPLC. The corresponding chromatograms are given in the appendix (figures 1 to 4), and tables \ref{tab-cf-benzaldehyde}, \ref{tab-cf-nitrobenzene} and \ref{tab-cf-chlorobenzene} summarizes the aforementioned chromatograms in terms of its capacity factors. In addition, figure \ref{fig-capacity-factors} illustrates the log of the capacity factors of the three compounds as a function of the polarity of methanoly, and table \ref{tab-selectivity} shows how the selectivity factor ($\alpha$) varies with the polarity of methanol.
+As stated earlier, in the first week of the experiment, the compositions of the mobile phase, methanol, was being varied with HPLC-grade water in order to notice the differences in separations in RP-HPLC. The corresponding chromatograms are given in the appendix (figures 1 to 4), and tables \ref{tab-cf-benzaldehyde}, \ref{tab-cf-nitrobenzene} and \ref{tab-cf-chlorobenzene} summarizes the aforementioned chromatograms in terms of its capacity factors. In addition, figure \ref{fig-capacity-factors} in the results section illustrates the log of the capacity factors of the three compounds as a function of the polarity of methanol, and table \ref{tab-selectivity} shows how the selectivity factor ($\alpha$) varies with the polarity of methanol. Also, figure \ref{fig-selectivity} in the results section illustrate this graphically.
 
 \begin{table}[h!]
 	\centering
@@ -154,19 +154,24 @@ As stated earlier, in the first week of the experiment, the compositions of the 
 	\caption{Data that shows how the selectivity factors ($\alpha$) change with the polarity of methanol.}
 	\begin{tabular}{|c|c|c|}
 		\hline
-		Methanol/\% & k' & log k' \\
+		Methanol/\% & Alpha 1,2 & Alpha 2,3 \\
 		\hline
-		100 & & \\
+		90 & 1.259 & 2.297 \\
 		\hline
-		90 & & \\
+		80 & 1.377 & 2.478 \\
 		\hline
-		80 & & \\
-		\hline
-		70 & & \\
+		70 & 1.484 & 2.748 \\
 		\hline
 	\end{tabular}
 	\label{tab-selectivity}
 \end{table}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\textwidth]{fig-selectivity}
+	\caption{Plot of the selectivity factors of benzaldehyde, nitrobenzene and chlorobenzene as a function of the polarity of methanol}
+	\label{fig-selectivity}
+\end{figure}
 
 Figures 5, 6 and 7 show the chromatograms of a chlorobenzene, nitrobenzene and benzaldehyde standards, respectively.
 
