finalized hplc lab report and gc-ms prelab

--- a/labs/gc-ms/prelab/prelab-gcms.tex
+++ b/labs/gc-ms/prelab/prelab-gcms.tex
@@ -13,15 +13,17 @@
 \maketitle
 
 \section{Introduction}
-Introduction is here. Talk about the instrument in general (GC-MS), then talk about GC-EI-LRMS, maybe talk about the detector why use it etc.
+Gas chromatography (GC) is a separation technique that analyzes volatile compounds \cite{vitha_chromatography:_2017}. Consequently, this analysis can lead a lot of useful situations such as the determination of the purity of a compound or even detecting explosives \cite{vitha_chromatography:_2017}. In GC, the analyte is volatilized and carried through the column by the mobile phase, often called the carrier gas \cite{harris}. This carrier gas can either be \ce{He} or \ce{H2} \cite{harris}. These gases are often chosen as the carrier gas as they are chemically inert and would therefore not react with the analytes \cite{vitha_chromatography:_2017}.
 
-The main objective of this experiment is to\dots
+Polybrominated diphenyl ethers (PBDEs) are a class of halogenated compounds that are commonly used as flame retardants \cite{bjorklund_mass_2003}. These compounds are an environmental health hazard as they have the potential to accumulate in the food chain \cite{thomsen_comparing_2002}. In addition, BDE-47, a PBDE congener, has been found to cause neurotoxic effects in adults \cite{thomsen_comparing_2002}. Commonly used detection techniques for PBDEs are high-resolution mass spectrometry and low-resolution mass spectrometry (LRMS) \cite{bjorklund_mass_2003}. LRMS is commonly done with selected ion monitoring (SIM) \cite{bjorklund_mass_2003}. SIM increases the selectivity of mass spectrometry for analytes and reduces its response to everything else \cite{harris}.
+
+The main objective of this experiment is to make a method that uses a SIM for quantitative analysis of PBDEs by GC-EI-LRMS.
 
 \section{Chemicals and their Hazards}
 
 \begin{description}
 	\item[BDE-47] full form: 2,2',4,4'-tetrabromodiphenyl ether; may be harmful if inhaled, swallowed, may cause skin and eye irritation.
-	\item[PBB-77] full form: 3,3',4,4'-tetrabromobiphenyl; 
+	\item[PBB-77] full form: 3,3',4,4'-tetrabromobiphenyl; flammable, acute toxicity, hazardous to the aquatic environment, may cause skin irritation.
 	\item[`2-HCH] also known as lindane; may cause acute toxicity, health hazard, hazardous to the aquatic environment.
 \end{description}
 
