--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -44,7 +44,7 @@ Lab Instructor: & Kevin Stroski % Instructor/supervisor
 %----------------------------------------------------------------------------------------
 
 \begin{abstract}
-	High-performance liquid chromatography utilizing the reverse-phase chromatographic technique was used to test the impact of separations by varying the polarity of the mobile phase on a mixture of benzaldehyde, nitrobenzene and chlorobenzene. In addition, this chromatography technique was used to quantitatively identify what was in a unknown pharmaceutical mixture. Finally, it was used to quantitatively analyze one of the unknowns in the mixture with the help of internal standards. For the first part, it was realized that a mobile phase consisting of $70\%$ methanol proved to give a desirable separation for the mixture. In the qualitative part of the experiment, it was concluded that phenacetin and salicylamide were the unknowns in the pharmaceutical mixture. Finally, the concentration of phenacetin was found out to be blank.
+	High-performance liquid chromatography utilizing the reverse-phase chromatographic technique was used to test the impact of separations by varying the polarity of the mobile phase on a mixture of benzaldehyde, nitrobenzene and chlorobenzene. In addition, this chromatography technique was used to quantitatively identify what was in a unknown pharmaceutical mixture. Finally, it was used to quantitatively analyze one of the unknowns in the mixture with the help of internal standards. For the first part, it was realized that a mobile phase consisting of $70\%$ methanol proved to give a desirable separation for the mixture. In the qualitative part of the experiment, it was concluded that phenacetin and salicylamide were the unknowns in the pharmaceutical mixture.
 \end{abstract}
 \newpage
 
@@ -236,8 +236,6 @@ The pressure of the column for each analysis is shown in table \ref{tab-pressure
 	\label{tab-pressure}
 \end{table}
 
-\textbf{Now draw a table for the data of the calibration curve, and include a figure.}
-
 \subsection{Discussion}
 The peaks in the chromatogram in figure 4 were able to identified as benzaldehyde, nitrobenzene and chlorobenzene by comparing and matching their retention times to the standards in figures 5, 6 and 7. 
 
@@ -248,10 +246,6 @@ In the quantitative identification of the pharmaceutical unknown mixture, the in
 For determining which of the compounds, phenacetin or salicylamide, would be chosen for quantitative analysis, it was agreed that phenacetin would be the ideal option as its peak area is much greater than salicylamide. As for the internal standards, caffeine instead of acetaminophen was chosen as its peak area is similar to phenacetin.
 
 As it can be seen in table \ref{tab-pressure}, the pressure increases whenever the polarity of the mobile phase, in this case methanol, increases (by the addition of water). This is because as one increases the amount of water in the solvent, it increases the viscosity of the solvent, so a higher pressure is required to maintain the flow rate \cite{harris}.
-
-The reason for using internal standards and not standard addition for calculating the concentration of the unknown analyte is that internal standards are preferred when give an accurate answer when 
-
-In conclusion, reversed-phase HPLC gives a \dots
 
 %----------------------------------------------------------------------------------------
 %	SECTION 5 (BIBLIOGRAPHY)
