complete refs in total-refs.tex

--- a/seminar/supercritical-fluid-chromatography/references/total-refs.tex
+++ b/seminar/supercritical-fluid-chromatography/references/total-refs.tex
@@ -9,10 +9,13 @@
 \maketitle
 
 \section{References}
-
-\begin{enumerate}
-	\item Something here
-\end{enumerate}
+\begin{description}
+	\item[(1)] Taylor, L. T. Supercritical Fluid Chromatography. Analytical Chemistry 2010, 82 (12), 4925–4935.
+	\item[(2)] Taylor, L. T. Supercritical Fluid Chromatography. Analytical Chemistry 2008, 80 (12), 4285–4294.
+	\item[(3)] Harris, D. C. Quantitative Chemical Analysis, 8th ed.; W.H. Freeman and Co: New York, 2010.
+	\item[(4)] Liang, Y.; Liu, J.; Zhong, Q.; Shen, L.; Yao, J.; Huang, T.; Zhou, T. Determination of Major Aromatic Constituents in Vanilla Using an On-Line Supercritical Fluid Extraction Coupled with Supercritical Fluid Chromatography. Journal of Separation Science 2018, 41 (7), 1600–1609.
+	\item[(5)] Agilent. Primers. https://www.agilent.com/cs/library/primers/public/5991-5509EN.pdf (accessed Nov 23, 2018)
+\end{description}
 
 \end{document}
 
