complete section on 'Injectors'

--- a/notes/prep-for-final/final-summary.tex
+++ b/notes/prep-for-final/final-summary.tex
@@ -178,6 +178,22 @@ Solvents need to be HPLC or of similar high-grade for a stable baseline and to e
 
 \subsection{Injectors}
 
+\begin{itemize}
+	\item Although various techniques (e.g., septum/syringe, stop-flow injection) have been used, most common device is a sampling valve
+	\item Rotary sampling valve: injects sample from a sample loop using flow switching without depressurizing system
+	\begin{itemize}
+		\item LOAD: sample loop loaded with syringe at atmospheric pressure
+		\begin{itemize}
+			\item Mobile phase by-passes loop
+		\end{itemize}
+		\item INJECT:  turning rotor changes flow lines, bringing loop into line, and sample swept into column
+		\begin{itemize}
+			\item No flow interruption, only a slight pressure surge (turn rotor quickly to prevent large pressure pulse)
+			\item For best reproducibility in quantitative work (\SI{+-0.2}{\%}) use loop overload (precalibrated, in sizes from \SIrange{0.1}{1000}{\mu{}L})
+		\end{itemize}
+	\end{itemize}
+\end{itemize}
+
 
 \subsection{Columns}
 
