finish section on columns in HPLC section

--- a/notes/prep-for-final/final-summary.tex
+++ b/notes/prep-for-final/final-summary.tex
@@ -197,6 +197,51 @@ Solvents need to be HPLC or of similar high-grade for a stable baseline and to e
 
 \subsection{Columns}
 
+Learning objectives:
+\begin{itemize}
+	\item Size (conventional vs. prep-scale vs. UHPLC)
+	\item Particle packing size (prep-scale to conventional to UHPLC)
+	\item Packing type (normal vs. reversed-phase, linking, etc.)
+\end{itemize}
+
+\subsubsection{General Types of Analytical HPLC Columns}
+
+\begin{itemize}
+	\item HPLC columns usually straight, stainless steel tubing containing packing of 3-10 $\mu{}$m $d_p$ (for UHPLC, its about 1.7 $\mu{}$m)
+	\item Analytical columns: for quantitative analysis
+	\begin{itemize}
+		\item Conventional: 2.1-4.6 mm i.d., 10-30 cm long, 0.5-2 mL/min (1 mL/min most common)
+		\item Fast HPLC: 2.1-4.6 mm i.d., 3-10 cm long, 2-4 mL/min
+		\begin{itemize}
+			\item Shorter, faster flow acceptable
+			\item Very low extracolumn volumes required in instrument
+		\end{itemize}
+		\item UHPLC: 2.1 mm i.d., 2-5 cm long, $\approx$\SIrange{0.5}{1}{mL/min}
+		\item Capillary HPLC: 0.15-0.32 mm i.d., 5-10 cm long, 0.01 mL/min
+		\begin{itemize}
+			\item Provides similar linear flow rates as conventional columns
+		\end{itemize}
+	\end{itemize}
+\end{itemize}
+
+\subsubsection{Guard and Preparative HPLC Columns}
+
+\begin{itemize}
+	\item Guard columns:
+	\begin{itemize}
+		\item Short column containing similar packing as analytical packing
+		\item Larger $d_p$ to avoid increasing backpressure ($\Delta$P)
+		\item Removes impurities from sample/solvent, protecting the expensive (\$500-\$2000+) analytical column
+	\end{itemize}
+	\item Preparative columns:
+	\begin{itemize}
+		\item Larger i.d. (e.g., 22.4 mm) and length (e.g., 25-100 cm) to increase sample capacity
+		\item Used to isolate and purify chemicals e.g., pharmaceutical, biochemical applications
+		\item Flow rates to \SI{20}{mL/min}
+		\item Requires specialty pump capable of handling high flow
+	\end{itemize}
+\end{itemize}
+
 
 \subsection{Detectors}
 
